Loading modules tested - works

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -12,12 +12,6 @@ target_link_libraries(TokenTest logic gmock_main)
 target_link_libraries(GuiTest ${GUI_TEST_LIBRARIES})
 qt5_use_modules(GuiTest Test)
 
-#test files to TokenLoaderTest
-file(COPY test.json DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
-install(FILES test.json DESTINATION ${CMAKE_INSTALL_PREFIX})
-file(COPY upgradesParameters.json DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
-install(FILES upgradesParameters.json DESTINATION ${CMAKE_INSTALL_PREFIX})
-
 install(TARGETS TokenTest DESTINATION ${CMAKE_INSTALL_PREFIX})
 install(TARGETS TokenLoaderTest DESTINATION ${CMAKE_INSTALL_PREFIX})
 install(TARGETS GuiTest DESTINATION ${CMAKE_INSTALL_PREFIX})
@@ -25,3 +19,17 @@ install(TARGETS GuiTest DESTINATION ${CMAKE_INSTALL_PREFIX})
 add_test(TokenLoaderTest TokenLoaderTest)
 add_test(TokenTest TokenTest)
 add_test(GuiTest GuiTest)
+
+#test files to TokenLoaderTest
+file(COPY test.json DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+install(FILES test.json DESTINATION ${CMAKE_INSTALL_PREFIX})
+file(COPY twoChangeAttributeUpgradesParameters.json DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+install(FILES twoChangeAttributeUpgradesParameters.json DESTINATION ${CMAKE_INSTALL_PREFIX})
+file(COPY oneChangeAttributeOfEnemyUpgradeParameters.json DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+install(FILES oneChangeAttributeOfEnemyUpgradeParameters.json DESTINATION ${CMAKE_INSTALL_PREFIX})
+file(COPY changeArmyUpgradeParameters.json DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+install(FILES changeArmyUpgradeParameters.json DESTINATION ${CMAKE_INSTALL_PREFIX})
+file(COPY twoAddAttributeUpgradesParameters.json DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+install(FILES twoAddAttributeUpgradesParameters.json DESTINATION ${CMAKE_INSTALL_PREFIX})
+file(COPY oneAddAttributeAndOneChangeAttributeUpgradesParameters.json DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+install(FILES oneAddAttributeAndOneChangeAttributeUpgradesParameters.json DESTINATION ${CMAKE_INSTALL_PREFIX})
