--- a/src/setup/CMakeLists.txt
+++ b/src/setup/CMakeLists.txt
@@ -10,5 +10,9 @@ qt5_use_modules(Json Core)
 add_library(JsonParser JsonParser.cpp)
 target_link_libraries(JsonParser Json)
 
+set(GAME_BOX_SRC GameBox.cpp GameBoxExceptions.hpp)
+add_library(GameBox ${GAME_BOX_SRC})
+target_link_libraries(GameBox gmock_main)
+
 add_library(TokenLoader TokenLoader.cpp)
-target_link_libraries(TokenLoader JsonParser StringToEnumTranslator logic gmock_main)
+target_link_libraries(TokenLoader JsonParser StringToEnumTranslator GameBox logic gmock_main)
