Create middle ring of fields on board.
Add test for creating middle ring.

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -10,6 +10,7 @@ set(MODEL_TEST_SRC ModelTest.cpp)
 set(TOKEN_TEST_SRC TokenTest.cpp MockController.hpp)
 set(FIELD_TEST_SRC FieldTest.cpp)
 set(PLAYER_TEST_SRC PlayerTest.cpp)
+set(BOARD_TEST_SRC BoardTest.cpp)
 set(GUI_TEST_SRC MainWindowSampleTest.cpp)
 set(GUI_TEST_LIBRARIES MainWindowSample ${QT_QTTEST_LIBRARY} ${QT_LIBRARIES})
 
@@ -27,6 +28,7 @@ add_executable(ModelTest ${MODEL_TEST_SRC})
 add_executable(TokenTest ${TOKEN_TEST_SRC})
 add_executable(FieldTest ${FIELD_TEST_SRC})
 add_executable(PlayerTest ${PLAYER_TEST_SRC})
+add_executable(BoardTest ${BOARD_TEST_SRC})
 add_executable(LogicTest ${FIELD_TEST_SRC} ${PLAYER_TEST_SRC} ${MODEL_TEST_SRC} ${CONTROLLER_TEST_SRC} ${TOKEN_TEST_SRC})
 add_executable(GuiTest ${GUI_TEST_SRC})
 
@@ -45,6 +47,7 @@ target_link_libraries(ModelTest logic gmock_main)
 target_link_libraries(TokenTest logic gmock_main)
 target_link_libraries(FieldTest logic gmock_main)
 target_link_libraries(PlayerTest logic gmock_main)
+target_link_libraries(BoardTest logic gmock_main)
 target_link_libraries(LogicTest logic gmock_main)
 target_link_libraries(GuiTest ${GUI_TEST_LIBRARIES})
 qt5_use_modules(GuiTest Test)
@@ -63,6 +66,7 @@ install(TARGETS ControllerTest DESTINATION ${CMAKE_INSTALL_PREFIX})
 install(TARGETS ModelTest DESTINATION ${CMAKE_INSTALL_PREFIX})
 install(TARGETS FieldTest DESTINATION ${CMAKE_INSTALL_PREFIX})
 install(TARGETS PlayerTest DESTINATION ${CMAKE_INSTALL_PREFIX})
+install(TARGETS BoardTest DESTINATION ${CMAKE_INSTALL_PREFIX})
 install(TARGETS LogicTest DESTINATION ${CMAKE_INSTALL_PREFIX})
 install(TARGETS GuiTest DESTINATION ${CMAKE_INSTALL_PREFIX})
 
@@ -79,6 +83,7 @@ add_test(ControllerTest ControllerTest)
 add_test(ModelTest ModelTest)
 add_test(FieldTest FieldTest)
 add_test(PlayerTest PlayerTest)
+add_test(BoardTest BoardTest)
 add_test(LogicTest LogicTest)
 add_test(GuiTest GuiTest)
 
