--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -5,14 +5,37 @@ set(JSON_PARSER_TEST_SRC JsonParserTest.cpp)
 set(GAME_BOX_TEST_SRC GameBoxTest.cpp)
 set(TOKEN_LOADER_TEST_SRC TokenLoaderTest.cpp MockJson.hpp)
 
+# test connected with game logic
 set(CONTROLLER_TEST_SRC ControllerTest.cpp)
 set(MODEL_TEST_SRC ModelTest.cpp)
 set(TOKEN_TEST_SRC TokenTest.cpp MockController.hpp)
 set(FIELD_TEST_SRC FieldTest.cpp)
 set(PLAYER_TEST_SRC PlayerTest.cpp)
 set(BOARD_TEST_SRC BoardTest.cpp)
+
+set(LOGIC_TEST_SRC ${CONTROLLER_TEST_SRC} ${MODEL_TEST_SRC} ${TOKEN_TEST_SRC} ${FIELD_TEST_SRC} ${PLAYER_TEST_SRC} ${BOARD_TEST_SRC})
+set(LOGIC_TEST_LIBS logic gmock_main)
+
+# test connected with gui
 set(GUI_TEST_SRC MainWindowSampleTest.cpp)
 set(GUI_TEST_LIBRARIES MainWindowSample ${QT_QTTEST_LIBRARY} ${QT_LIBRARIES})
+
+macro(create_test name src libs)
+  add_executable(${name} ${src})
+  target_link_libraries(${name} ${libs})
+  install(TARGETS ${name} DESTINATION ${CMAKE_INSTALL_PREFIX})
+  add_test(${name} ${name})
+endmacro(create_test)
+
+create_test(ControllerTest "${CONTROLLER_TEST_SRC}" "${LOGIC_TEST_LIBS}")
+create_test(ModelTest "${MODEL_TEST_SRC}" "${LOGIC_TEST_LIBS}")
+create_test(TokenTest "${TOKEN_TEST_SRC}" "${LOGIC_TEST_LIBS}")
+create_test(FieldTest "${FIELD_TEST_SRC}" "${LOGIC_TEST_LIBS}")
+create_test(PlayerTest "${PLAYER_TEST_SRC}" "${LOGIC_TEST_LIBS}")
+create_test(BoardTest "${BOARD_TEST_SRC}" "${LOGIC_TEST_LIBS}")
+
+create_test(LogicTest "${LOGIC_TEST_SRC}" "${LOGIC_TEST_LIBS}")
+
 
 #tests connected with token loading
 add_executable(StringToEnumTranslatorTest ${STRING_TO_ENUM_TRANSLATOR_TEST_SRC})
@@ -23,13 +46,6 @@ add_executable(TokenLoaderTest ${TOKEN_LOADER_TEST_SRC})
 #test all classes responsible of loading tokens together
 add_executable(LoadingTokensTest ${STRING_TO_ENUM_TRANSLATOR_TEST_SRC} ${JSON_TEST_SRC} ${JSON_PARSER_TEST_SRC} ${GAME_BOX_TEST_SRC} ${TOKEN_LOADER_TEST_SRC})
 
-add_executable(ControllerTest ${CONTROLLER_TEST_SRC})
-add_executable(ModelTest ${MODEL_TEST_SRC})
-add_executable(TokenTest ${TOKEN_TEST_SRC})
-add_executable(FieldTest ${FIELD_TEST_SRC})
-add_executable(PlayerTest ${PLAYER_TEST_SRC})
-add_executable(BoardTest ${BOARD_TEST_SRC})
-add_executable(LogicTest ${FIELD_TEST_SRC} ${PLAYER_TEST_SRC} ${MODEL_TEST_SRC} ${CONTROLLER_TEST_SRC} ${TOKEN_TEST_SRC})
 add_executable(GuiTest ${GUI_TEST_SRC})
 
 #tests connected with token loading
@@ -42,13 +58,6 @@ target_link_libraries(TokenLoaderTest TokenLoader gmock_main)
 target_link_libraries(LoadingTokensTest StringToEnumTranslator Json JsonParser GameBox TokenLoader gmock_main)
 
 
-target_link_libraries(ControllerTest logic gmock_main)
-target_link_libraries(ModelTest logic gmock_main)
-target_link_libraries(TokenTest logic gmock_main)
-target_link_libraries(FieldTest logic gmock_main)
-target_link_libraries(PlayerTest logic gmock_main)
-target_link_libraries(BoardTest logic gmock_main)
-target_link_libraries(LogicTest logic gmock_main)
 target_link_libraries(GuiTest ${GUI_TEST_LIBRARIES})
 qt5_use_modules(GuiTest Test)
 
@@ -61,13 +70,6 @@ install(TARGETS TokenLoaderTest DESTINATION ${CMAKE_INSTALL_PREFIX})
 #test all classes responsible of loading tokens together
 install(TARGETS LoadingTokensTest DESTINATION ${CMAKE_INSTALL_PREFIX})
 
-install(TARGETS TokenTest DESTINATION ${CMAKE_INSTALL_PREFIX})
-install(TARGETS ControllerTest DESTINATION ${CMAKE_INSTALL_PREFIX})
-install(TARGETS ModelTest DESTINATION ${CMAKE_INSTALL_PREFIX})
-install(TARGETS FieldTest DESTINATION ${CMAKE_INSTALL_PREFIX})
-install(TARGETS PlayerTest DESTINATION ${CMAKE_INSTALL_PREFIX})
-install(TARGETS BoardTest DESTINATION ${CMAKE_INSTALL_PREFIX})
-install(TARGETS LogicTest DESTINATION ${CMAKE_INSTALL_PREFIX})
 install(TARGETS GuiTest DESTINATION ${CMAKE_INSTALL_PREFIX})
 
 #tests connected with token loading
@@ -78,13 +80,6 @@ add_test(GameBoxTest GameBoxTest)
 add_test(TokenLoaderTest TokenLoaderTest)
 add_test(LoadingTokensTest LoadingTokensTest)
 
-add_test(TokenTest TokenTest)
-add_test(ControllerTest ControllerTest)
-add_test(ModelTest ModelTest)
-add_test(FieldTest FieldTest)
-add_test(PlayerTest PlayerTest)
-add_test(BoardTest BoardTest)
-add_test(LogicTest LogicTest)
 add_test(GuiTest GuiTest)
 
 #test files to TokenLoaderTest
