googlemock from svn repo
requires svn and internet connection, works in console, qt creator and clion, but in clion there is sometimes problem with includes (shitload of red) but compiles, runs and sometimes indexes correctly

--- a/src/setup/CMakeLists.txt
+++ b/src/setup/CMakeLists.txt
@@ -12,7 +12,9 @@ target_link_libraries(JsonParser Json)
 
 set(GAME_BOX_SRC GameBox.cpp GameBoxExceptions.hpp)
 add_library(GameBox ${GAME_BOX_SRC})
-target_link_libraries(GameBox gmock_main)
+target_link_libraries(GameBox ${GTEST_LIBRARIES})
+add_dependencies(GameBox gmock)
 
 add_library(TokenLoader TokenLoader.cpp)
-target_link_libraries(TokenLoader JsonParser StringToEnumTranslator GameBox logic gmock_main)
+target_link_libraries(TokenLoader JsonParser StringToEnumTranslator GameBox logic ${GTEST_LIBRARIES})
+add_dependencies(TokenLoader gmock)
