--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(PirexPickleBlowfish)
 cmake_minimum_required(VERSION 2.8)
 
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
+SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 
 include(C++11Compiling)
 include(GoogleMock)
